Fix select menu shifting

--- a/resources/js/react/assets/scss/pages/topic-tag.scss
+++ b/resources/js/react/assets/scss/pages/topic-tag.scss
@@ -13,6 +13,10 @@
         
         .select-container {
             min-width: 200px;
+
+            .select__menu {
+                top: unset;
+            }
         }
     }
 }
